--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,24 @@
 
         <version.junit>5.8.0</version.junit>
         <version.mockito>5.12.0</version.mockito>
+
+        <version.slf4j>1.7.5</version.slf4j>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${version.slf4j}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
