--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
             </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.9.3.1</version>
+            </plugin>
         </plugins>
     </build>
 </project>
