--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
         <version.junit>5.8.0</version.junit>
         <version.mockito>5.12.0</version.mockito>
 
+        <javafx.version>23</javafx.version>
+
+        <!--
+              Windows: win
+              macOS / Intel: mac
+              macOS / Apple Silicon: mac-aarch64
+              Linux / x64: linux
+              Linux / aarch64 (Raspberry Pi): linux-aarch64
+        -->
+        <javafx.platform>mac-aarch64</javafx.platform>
+
         <version.slf4j>1.7.5</version.slf4j>
         <logback.version>1.2.3</logback.version>
     </properties>
@@ -59,6 +70,20 @@
             <version>4.0.0-beta-3</version>
         </dependency>
 
+        <!-- pull only what you need -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>${javafx.platform}</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>${javafx.platform}</classifier>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -70,6 +95,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx</artifactId>
+                <version>23</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            -->
         </dependencies>
     </dependencyManagement>
 
@@ -113,7 +147,9 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.sternkn.djvu.gui.MainWindow</mainClass>
+
+                            <!-- com.sternkn.djvu.gui.MainWindow -->
+                            <mainClass>com.sternkn.djvu.gui_java_fx.MainApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -126,6 +162,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.sternkn.djvu.gui_java_fx.MainApp</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
