--- a/pom.xml
+++ b/pom.xml
@@ -137,39 +137,28 @@
                 <version>4.9.3.1</version>
             </plugin>
 
+            <!--
+                $ mvnDebug package
+                $ mvn exec:java
+            -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-
-                            <!-- com.sternkn.djvu.gui.MainWindow -->
-                            <mainClass>com.sternkn.djvu.gui_java_fx.MainApp</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <!--
                 <executions>
                     <execution>
-                        <id>assemble-all</id>
+                        <id>fx-execution</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>java</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                -->
                 <configuration>
                     <mainClass>com.sternkn.djvu.gui_java_fx.MainApp</mainClass>
+                    <classpathScope>runtime</classpathScope>
                 </configuration>
             </plugin>
         </plugins>
